<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/selecione_o_numero_de_dados"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/numDadosSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/numero_dados"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/entre_com_o_numero_de_faces"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/numFacesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textSize="18sp"
        android:hint="@string/entre_com_o_numero_de_faces"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/clique_no_botao_abaixo_para_jogar_o_dado"
        android:textSize="18sp" />

    <Button
        android:id="@+id/jogarDadoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jogarDado"
        android:text="@string/jogar" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ainda_nao_foi_lancado"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/resultadoImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/resultado"
            app:srcCompat="@android:color/transparent" />

        <ImageView
            android:id="@+id/resultado2ImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/resultado"
            android:visibility="gone"
            app:srcCompat="@android:color/transparent" />
    </LinearLayout>

</LinearLayout>